--- a/css/style.css
+++ b/css/style.css
@@ -263,3 +263,44 @@ button{
     border-radius: 10px;
     margin: 0 7px;
 }
+
+button:hover{
+    background-color: rgb(255, 165, 0);
+}
+
+/* collections.html */
+
+section{
+    width: 90%;
+    margin-left: 5%;
+}
+
+.collection-item{
+    float: none;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(255, 165, 0, 0.8);
+    border: 2px solid rgba(255, 165, 0, 0.8) ;
+    border-radius: 20px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+.images{
+    text-align: center;
+    width: 100%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+.field-group{
+    width: 33%;
+    margin-left: .25%;
+}
+
+.field-group p{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 10%;
+    line-height: 200%;
+    color: aliceblue;
+}
+
